# streflop

./: CMakeLists.txt  FPUSettings.h  Math.cpp  Random.cpp  SoftFloatWrapper.cpp  System.h  streflop.h  streflop_cond.h
libm/: streflop_libm_bridge.h
libm/dbl-64/: e_acosh.cpp  e_atanh.cpp  e_cosh.cpp  e_exp2.cpp  e_fmod.cpp  e_gamma_r.cpp  e_hypot.cpp  e_j0.cpp  e_j1.cpp  e_jn.cpp  e_lgamma_r.cpp  e_log10.cpp  e_log2.cpp  e_rem_pio2.cpp  e_sinh.cpp  k_rem_pio2.cpp  k_tan.cpp  s_asinh.cpp  s_atan.cpp  s_cbrt.cpp  s_ceil.cpp  s_copysign.cpp  s_erf.cpp  s_expm1.cpp  s_fabs.cpp  s_finite.cpp  s_floor.cpp  s_fpclassify.cpp  s_frexp.cpp  s_ilogb.cpp  s_isinf.cpp  s_isnan.cpp  s_ldexp.cpp  s_llrint.cpp  s_llround.cpp  s_log1p.cpp  s_logb.cpp  s_lrint.cpp  s_lround.cpp  s_modf.cpp  (+13 more)
libm/flt-32/: e_acosf.cpp  e_acoshf.cpp  e_asinf.cpp  e_atan2f.cpp  e_atanhf.cpp  e_coshf.cpp  e_exp2f.cpp  e_expf.cpp  e_fmodf.cpp  e_gammaf_r.cpp  e_hypotf.cpp  e_j0f.cpp  e_j1f.cpp  e_jnf.cpp  e_lgammaf_r.cpp  e_log10f.cpp  e_log2f.cpp  e_logf.cpp  e_powf.cpp  e_rem_pio2f.cpp  e_remainderf.cpp  e_sinhf.cpp  e_sqrtf.cpp  k_cosf.cpp  k_rem_pio2f.cpp  k_sinf.cpp  k_tanf.cpp  s_asinhf.cpp  s_atanf.cpp  s_cbrtf.cpp  s_ceilf.cpp  s_copysignf.cpp  s_cosf.cpp  s_erff.cpp  s_expm1f.cpp  s_fabsf.cpp  s_finitef.cpp  s_floorf.cpp  s_fpclassifyf.cpp  s_frexpf.cpp  (+24 more)
libm/ldbl-96/: e_acoshl.cpp  e_asinl.cpp  e_atan2l.cpp  e_atanhl.cpp  e_coshl.cpp  e_gammal_r.cpp  e_hypotl.cpp  e_j0l.cpp  e_j1l.cpp  e_jnl.cpp  e_lgammal_r.cpp  e_remainderl.cpp  e_sinhl.cpp  s_asinhl.cpp  s_cbrtl.cpp  s_ceill.cpp  s_copysignl.cpp  s_cosl.cpp  s_erfl.cpp  s_fabsl.cpp  s_finitel.cpp  s_floorl.cpp  s_fpclassifyl.cpp  s_frexpl.cpp  s_ilogbl.cpp  s_isinfl.cpp  s_isnanl.cpp  s_ldexpl.cpp  s_llrintl.cpp  s_llroundl.cpp  s_logbl.cpp  s_lrintl.cpp  s_lroundl.cpp  s_modfl.cpp  s_nearbyintl.cpp  s_nextafterl.cpp  s_remquol.cpp  s_rintl.cpp  s_roundl.cpp  s_scalblnl.cpp  (+8 more)
softfloat/: softfloat.h
tests/: arithmeticTest.cpp
